calendarmigrator.h
@@ -1,7 +1,7 @@
 /*
  *  calendarmigrator.h  -  migrates or creates KAlarm Akonadi resources
  *  Program:  kalarm
- *  Copyright © 2011 by David Jarvie <djarvie@kde.org>
+ *  Copyright © 2011-2012 by David Jarvie <djarvie@kde.org>
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -31,10 +31,17 @@
 class KConfigGroup;
 class KJob;
 namespace KRES { class Resource; }
+namespace Akonadi { class CollectionFetchJob; }
 
 class CalendarCreator;
 class CalendarUpdater;
 
+using namespace KAlarmCal;
+
+/**
+ * Class to migrate KResources alarm calendars from pre-Akonadi versions of
+ * KAlarm, and to create default calendar resources if none exist.
+ */
 class CalendarMigrator : public QObject
 {
         Q_OBJECT
@@ -52,16 +59,20 @@ class CalendarMigrator : public QObject
         void creating(const QString& path, bool finished);
 
     private slots:
+        void collectionFetchResult(KJob*);
         void creatingCalendar(const QString& path);
         void calendarCreated(CalendarCreator*);
 
     private:
         CalendarMigrator(QObject* parent = 0);
         void migrateOrCreate();
+        void createDefaultResources();
         template <class Interface> static bool updateStorageFormat(const Akonadi::AgentInstance&, QString& errorMessage, QObject* parent);
 
         static CalendarMigrator* mInstance;
         QList<CalendarCreator*> mCalendarsPending;   // pending calendar migration or creation jobs
+        QList<Akonadi::CollectionFetchJob*> mFetchesPending;  // pending collection fetch jobs for existing resources
+        CalEvent::Types mExistingAlarmTypes;   // alarm types provided by existing Akonadi resources
 
         friend class CalendarUpdater;
 };
